--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -141,7 +141,9 @@
     ")\n",
     "\n",
     "print(len(links_df)) # Length should be 9742\n",
-    "links_df.head()"
+    "links_df.head()\n",
+    "\n",
+    "# We can probably ignore this table"
    ]
   },
   {
