Attemping supervised log regress model

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
        "4        5  113041  11862.0"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 238,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
        "4                                       Comedy  "
       ]
      },
-     "execution_count": 180,
+     "execution_count": 239,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +501,7 @@
        "24       1      441     4.0  964980868"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 240,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +609,7 @@
        "4       2    89774              MMA  1445715200"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 241,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [
     {
@@ -750,7 +750,7 @@
        "[100 rows x 2 columns]"
       ]
      },
-     "execution_count": 183,
+     "execution_count": 242,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [
     {
@@ -1099,7 +1099,7 @@
        "24          Just Eat It: A Food Waste Story (2014)  Documentary  "
       ]
      },
-     "execution_count": 184,
+     "execution_count": 243,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1122,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [
     {
@@ -1466,7 +1466,7 @@
        "24          Just Eat It: A Food Waste Story (2014)  Documentary    4.0  "
       ]
      },
-     "execution_count": 185,
+     "execution_count": 244,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1487,25 +1487,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [],
    "source": [
     "# ML model (supervised learning - logistic regression?)\n",
     "\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "import pandas as pd\n",
-    "import tensorflow as tf"
+    "from sklearn.model_selection import train_test_split # supervised\n",
+    "from sklearn.preprocessing import StandardScaler # supervised\n",
+    "from sklearn.metrics import balanced_accuracy_score, confusion_matrix, classification_report # supervised\n",
+    "from sklearn.linear_model import LogisticRegression # supervised\n",
+    "# import hvplot.pandas # unsupervised\n",
+    "# from sklearn.cluster import KMeans # unsupervised\n",
+    "# from sklearn.decomposition import PCA # unsupervised\n",
+    "# from sklearn.preprocessing import StandardScaler # unsupervised\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 246,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['genre_Children', 'genre_Comedy', 'genre_Crime', 'genre_Documentary',\n",
+       "       'genre_Drama', 'genre_Fantasy', 'genre_Film-Noir', 'genre_Horror',\n",
+       "       'genre_Musical', 'genre_Mystery', 'genre_Romance', 'genre_Sci-Fi',\n",
+       "       'genre_Thriller', 'genre_Western', 'rating_0.5', 'rating_1.0',\n",
+       "       'rating_1.5', 'rating_2.0', 'rating_2.5', 'rating_3.0', 'rating_3.5',\n",
+       "       'rating_4.0', 'rating_4.5', 'rating_5.0', 'rating_'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 246,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mtr_num = pd.get_dummies(tags_movies_ratings)\n",
+    "columns = mtr_num.columns\n",
+    "columns[-25:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 247,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mtr_num = pd.get_dummies(tags_movies_ratings)"
+    "y = mtr_num[[\"rating_0.5\", \"rating_1.0\", \"rating_1.5\", \"rating_2.0\", \"rating_2.5\", \"rating_3.0\", \"rating_3.5\", \"rating_4.0\", \n",
+    "            \"rating_4.5\", \"rating_5.0\", \"rating_\"]]\n",
+    "\n",
+    "X = mtr_num.drop(columns=[\"rating_0.5\", \"rating_1.0\", \"rating_1.5\", \"rating_2.0\", \"rating_2.5\", \"rating_3.0\", \"rating_3.5\", \"rating_4.0\", \n",
+    "            \"rating_4.5\", \"rating_5.0\", \"rating_\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 248,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X.columns = X.columns.astype(str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 249,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 250,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "y should be a 1d array, got an array of shape (2762, 11) instead.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\dmrop\\Desktop\\Group_Projects\\Project_4\\Project_4_ML\\analysis.ipynb Cell 14\u001b[0m line \u001b[0;36m3\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/dmrop/Desktop/Group_Projects/Project_4/Project_4_ML/analysis.ipynb#X40sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m logistic_regression_model \u001b[39m=\u001b[39m LogisticRegression(random_state\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/dmrop/Desktop/Group_Projects/Project_4/Project_4_ML/analysis.ipynb#X40sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m lr_model \u001b[39m=\u001b[39m logistic_regression_model\u001b[39m.\u001b[39;49mfit(X_train, y_train)\n",
+      "File \u001b[1;32mc:\\Users\\dmrop\\anaconda3\\envs\\dev\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:1196\u001b[0m, in \u001b[0;36mLogisticRegression.fit\u001b[1;34m(self, X, y, sample_weight)\u001b[0m\n\u001b[0;32m   1193\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m   1194\u001b[0m     _dtype \u001b[39m=\u001b[39m [np\u001b[39m.\u001b[39mfloat64, np\u001b[39m.\u001b[39mfloat32]\n\u001b[1;32m-> 1196\u001b[0m X, y \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_validate_data(\n\u001b[0;32m   1197\u001b[0m     X,\n\u001b[0;32m   1198\u001b[0m     y,\n\u001b[0;32m   1199\u001b[0m     accept_sparse\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mcsr\u001b[39;49m\u001b[39m\"\u001b[39;49m,\n\u001b[0;32m   1200\u001b[0m     dtype\u001b[39m=\u001b[39;49m_dtype,\n\u001b[0;32m   1201\u001b[0m     order\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mC\u001b[39;49m\u001b[39m\"\u001b[39;49m,\n\u001b[0;32m   1202\u001b[0m     accept_large_sparse\u001b[39m=\u001b[39;49msolver \u001b[39mnot\u001b[39;49;00m \u001b[39min\u001b[39;49;00m [\u001b[39m\"\u001b[39;49m\u001b[39mliblinear\u001b[39;49m\u001b[39m\"\u001b[39;49m, \u001b[39m\"\u001b[39;49m\u001b[39msag\u001b[39;49m\u001b[39m\"\u001b[39;49m, \u001b[39m\"\u001b[39;49m\u001b[39msaga\u001b[39;49m\u001b[39m\"\u001b[39;49m],\n\u001b[0;32m   1203\u001b[0m )\n\u001b[0;32m   1204\u001b[0m check_classification_targets(y)\n\u001b[0;32m   1205\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mclasses_ \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39munique(y)\n",
+      "File \u001b[1;32mc:\\Users\\dmrop\\anaconda3\\envs\\dev\\lib\\site-packages\\sklearn\\base.py:584\u001b[0m, in \u001b[0;36mBaseEstimator._validate_data\u001b[1;34m(self, X, y, reset, validate_separately, **check_params)\u001b[0m\n\u001b[0;32m    582\u001b[0m         y \u001b[39m=\u001b[39m check_array(y, input_name\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39my\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mcheck_y_params)\n\u001b[0;32m    583\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[1;32m--> 584\u001b[0m         X, y \u001b[39m=\u001b[39m check_X_y(X, y, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mcheck_params)\n\u001b[0;32m    585\u001b[0m     out \u001b[39m=\u001b[39m X, y\n\u001b[0;32m    587\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m no_val_X \u001b[39mand\u001b[39;00m check_params\u001b[39m.\u001b[39mget(\u001b[39m\"\u001b[39m\u001b[39mensure_2d\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39mTrue\u001b[39;00m):\n",
+      "File \u001b[1;32mc:\\Users\\dmrop\\anaconda3\\envs\\dev\\lib\\site-packages\\sklearn\\utils\\validation.py:1122\u001b[0m, in \u001b[0;36mcheck_X_y\u001b[1;34m(X, y, accept_sparse, accept_large_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, multi_output, ensure_min_samples, ensure_min_features, y_numeric, estimator)\u001b[0m\n\u001b[0;32m   1102\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[0;32m   1103\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mestimator_name\u001b[39m}\u001b[39;00m\u001b[39m requires y to be passed, but the target y is None\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m   1104\u001b[0m     )\n\u001b[0;32m   1106\u001b[0m X \u001b[39m=\u001b[39m check_array(\n\u001b[0;32m   1107\u001b[0m     X,\n\u001b[0;32m   1108\u001b[0m     accept_sparse\u001b[39m=\u001b[39maccept_sparse,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   1119\u001b[0m     input_name\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mX\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m   1120\u001b[0m )\n\u001b[1;32m-> 1122\u001b[0m y \u001b[39m=\u001b[39m _check_y(y, multi_output\u001b[39m=\u001b[39;49mmulti_output, y_numeric\u001b[39m=\u001b[39;49my_numeric, estimator\u001b[39m=\u001b[39;49mestimator)\n\u001b[0;32m   1124\u001b[0m check_consistent_length(X, y)\n\u001b[0;32m   1126\u001b[0m \u001b[39mreturn\u001b[39;00m X, y\n",
+      "File \u001b[1;32mc:\\Users\\dmrop\\anaconda3\\envs\\dev\\lib\\site-packages\\sklearn\\utils\\validation.py:1143\u001b[0m, in \u001b[0;36m_check_y\u001b[1;34m(y, multi_output, y_numeric, estimator)\u001b[0m\n\u001b[0;32m   1141\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m   1142\u001b[0m     estimator_name \u001b[39m=\u001b[39m _check_estimator_name(estimator)\n\u001b[1;32m-> 1143\u001b[0m     y \u001b[39m=\u001b[39m column_or_1d(y, warn\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m)\n\u001b[0;32m   1144\u001b[0m     _assert_all_finite(y, input_name\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39my\u001b[39m\u001b[39m\"\u001b[39m, estimator_name\u001b[39m=\u001b[39mestimator_name)\n\u001b[0;32m   1145\u001b[0m     _ensure_no_complex_data(y)\n",
+      "File \u001b[1;32mc:\\Users\\dmrop\\anaconda3\\envs\\dev\\lib\\site-packages\\sklearn\\utils\\validation.py:1202\u001b[0m, in \u001b[0;36mcolumn_or_1d\u001b[1;34m(y, dtype, warn)\u001b[0m\n\u001b[0;32m   1193\u001b[0m         warnings\u001b[39m.\u001b[39mwarn(\n\u001b[0;32m   1194\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39mA column-vector y was passed when a 1d array was\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m   1195\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39m expected. Please change the shape of y to \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   1198\u001b[0m             stacklevel\u001b[39m=\u001b[39m\u001b[39m2\u001b[39m,\n\u001b[0;32m   1199\u001b[0m         )\n\u001b[0;32m   1200\u001b[0m     \u001b[39mreturn\u001b[39;00m _asarray_with_order(xp\u001b[39m.\u001b[39mreshape(y, \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m), order\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mC\u001b[39m\u001b[39m\"\u001b[39m, xp\u001b[39m=\u001b[39mxp)\n\u001b[1;32m-> 1202\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[0;32m   1203\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39my should be a 1d array, got an array of shape \u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m instead.\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(shape)\n\u001b[0;32m   1204\u001b[0m )\n",
+      "\u001b[1;31mValueError\u001b[0m: y should be a 1d array, got an array of shape (2762, 11) instead."
+     ]
+    }
+   ],
+   "source": [
+    "logistic_regression_model = LogisticRegression(random_state=1)\n",
+    "\n",
+    "lr_model = logistic_regression_model.fit(X_train, y_train)"
    ]
   }
  ],
